; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/altera/socfpga/extr_socfpga_manager.c_fpga_write.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/altera/socfpga/extr_socfpga_manager.c_fpga_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cdev = type { %struct.fpgamgr_softc* }
%struct.fpgamgr_softc = type { i32, i32 }
%struct.uio = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cdev*, %struct.uio*, i32)* @fpga_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fpga_write(%struct.cdev* %0, %struct.uio* %1, i32 %2) #0 {
  %4 = alloca %struct.cdev*, align 8
  %5 = alloca %struct.uio*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.fpgamgr_softc*, align 8
  %8 = alloca i32, align 4
  store %struct.cdev* %0, %struct.cdev** %4, align 8
  store %struct.uio* %1, %struct.uio** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load %struct.cdev*, %struct.cdev** %4, align 8
  %10 = getelementptr inbounds %struct.cdev, %struct.cdev* %9, i32 0, i32 0
  %11 = load %struct.fpgamgr_softc*, %struct.fpgamgr_softc** %10, align 8
  store %struct.fpgamgr_softc* %11, %struct.fpgamgr_softc** %7, align 8
  br label %12

12:                                               ; preds = %17, %3
  %13 = load %struct.uio*, %struct.uio** %5, align 8
  %14 = getelementptr inbounds %struct.uio, %struct.uio* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = icmp sgt i64 %15, 0
  br i1 %16, label %17, label %28

17:                                               ; preds = %12
  %18 = load %struct.uio*, %struct.uio** %5, align 8
  %19 = call i32 @uiomove(i32* %8, i32 4, %struct.uio* %18)
  %20 = load %struct.fpgamgr_softc*, %struct.fpgamgr_softc** %7, align 8
  %21 = getelementptr inbounds %struct.fpgamgr_softc, %struct.fpgamgr_softc* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  %23 = load %struct.fpgamgr_softc*, %struct.fpgamgr_softc** %7, align 8
  %24 = getelementptr inbounds %struct.fpgamgr_softc, %struct.fpgamgr_softc* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load i32, i32* %8, align 4
  %27 = call i32 @bus_space_write_4(i32 %22, i32 %25, i32 0, i32 %26)
  br label %12

28:                                               ; preds = %12
  ret i32 0
}

declare dso_local i32 @uiomove(i32*, i32, %struct.uio*) #1

declare dso_local i32 @bus_space_write_4(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
